//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  comments Comment [not null]
  reactions Reaction [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String
  content String [not null]
  comments Comment [not null]
  reactions Reaction [not null]
  author User
  authorId String
  language String
}

Table Comment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  content String
  author User
  authorId String
  post Post [not null]
  postId String [not null]
}

Table Reaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  post Post
  postId String
  author User
  authorId String
  browserFP String
  name String [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Comment.authorId > User.id

Ref: Comment.postId > Post.id

Ref: Reaction.postId > Post.id

Ref: Reaction.authorId > User.id